# vst

Ombra/: CMakeLists.txt  COMPILER-EN-LIGNE.md  README.md
Ombra/.github/workflows/: build-windows.yml
Ombra/Source/: OmbraLookAndFeel.h  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  WavetableOscillator.h
